--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -11,9 +11,8 @@ jobs:
         ruby-version: 2
     - run: gem install u3d
     - run: gem environment
-    - run: ls -l /vagrant/ || exit 0
-    - run: ls -l /global/ || exit 0
-    - run: ls -l /Library/Ruby/Gems/ || exit 0
+    - run: ls -l //opt/hostedtoolcache/Ruby/2.6.3/x64/lib/ruby/gems/2.6.0 || exit 0
+    - run: ls -l /home/runner/.gem/ruby/2.6.0 || exit 0
     - run: sudo apt-get update
     - run: sudo apt-get -y install gconf-service lib32gcc1 lib32stdc++6 libasound2 libc6 libc6-i386 libcairo2 libcap2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libfreetype6 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libgl1-mesa-glx libglib2.0-0 libglu1-mesa libgtk2.0-0 libnspr4 libnss3 libpango1.0-0 libstdc++6 libx11-6 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxtst6 zlib1g debconf npm libpq5
     - run: u3d install 2018.2.7f1 --all
@@ -66,20 +65,20 @@ jobs:
 #     - run: /Applications/Unity/Unity.app/Contents/MacOS/Unity -quit -batchMode -createManualActivationFile -logfile || exit 0
 #     - run: cat Unity_v${{ matrix.unity-version }}.alf
 
-  build-ubuntu:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        unity-version: [2018.4.12f1, 2020.1.0a14]
-    steps:
-    - id: z
-      uses: pCYSl5EDgo/setup-unity@master
-      with:
-        unity-version: ${{ matrix.unity-version }}
-    - run: ls -l
-    - run: ls -l /opt/
-    - run: ls -l /opt/Unity/
-    - run: ls -l /opt/Unity/Editor/
-    - run: echo ${{ steps.z.outputs.id }}
-    - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
-    - run: cat Unity_v${{ matrix.unity-version }}.alf
+#   build-ubuntu:
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         unity-version: [2018.4.12f1, 2020.1.0a14]
+#     steps:
+#     - id: z
+#       uses: pCYSl5EDgo/setup-unity@master
+#       with:
+#         unity-version: ${{ matrix.unity-version }}
+#     - run: ls -l
+#     - run: ls -l /opt/
+#     - run: ls -l /opt/Unity/
+#     - run: ls -l /opt/Unity/Editor/
+#     - run: echo ${{ steps.z.outputs.id }}
+#     - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
+#     - run: cat Unity_v${{ matrix.unity-version }}.alf
