--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -9,7 +9,9 @@ jobs:
     - uses: actions/setup-ruby@v1
       with:
         ruby-version: 2
-    - run: sudo -E gem install u3d -v 1.2.1
+    - run: gem install u3d -v 1.2.1
+    - run: whereis gem
+    - run: whereis u3d
     - run: gem environment
     - run: ls -l /opt/hostedtoolcache/Ruby/2.6.3/x64/lib/ruby/gems/2.6.0/gems/u3d-1.2.1/ || exit 0
     - run: sudo apt-get update
