--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -13,8 +13,8 @@ jobs:
       with:
         ruby-version: '2.6.3'
     - run: gem install u3d -v 1.2.1
-    - run: whereis u3d
-    - run: sudo /opt/hostedtoolcache/Ruby/2.6.3/x64/bin/u3d install ${{ matrix.unity-version }} --all
+    - run: which u3d
+#     - run: sudo /opt/hostedtoolcache/Ruby/2.6.3/x64/bin/u3d install ${{ matrix.unity-version }} --all
 #   build-windows-all:
 #     runs-on: [windows-latest]
 #     strategy:
