--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -87,7 +87,7 @@ jobs:
         ls -l /Applications/Unity/
         ls -l /Applications/Unity/Unity.app/
         ls -l /Applications/Unity/Unity.app/Contents/
-        ls -l /Applications/Unity/Unity.app/Contents/MacOS/
+        ls -l /Applications/Unity/Unity.app/Contents/Managed/
     - run: /Applications/Unity/Unity.app/Contents/MacOS/Unity -quit -batchMode -createManualActivationFile -logfile || exit 0
     - run: cat Unity_v${{ matrix.unity-version }}.alf
 
