--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -88,29 +88,43 @@ jobs:
 #     - run: /Applications/Unity/Unity.app/Contents/MacOS/Unity -quit -batchMode -createManualActivationFile -logfile || exit 0
 #     - run: cat Unity_v${{ matrix.unity-version }}.alf
 
-  build-ubuntu:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        unity-version: 
-        - 2018.4.9f1
+#   build-ubuntu:
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         unity-version: 
+#         - 2018.4.9f1
 #         - 2020.1.0a14
-    steps:
-    - id: z
-      uses: pCYSl5EDgo/setup-unity@master
-      with:
-        unity-version: ${{ matrix.unity-version }}
-    - run: ls -l
-    - run: ls -l /opt/
-    - run: ls -l /opt/Unity/
-    - run: ls -l /opt/Unity/Editor/
-    - run: echo ${{ steps.z.outputs.id }}
-    - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
-    - run: cat Unity_v${{ matrix.unity-version }}.alf
+#     steps:
+#     - id: z
+#       uses: pCYSl5EDgo/setup-unity@master
+#       with:
+#         unity-version: ${{ matrix.unity-version }}
+#     - run: ls -l
+#     - run: ls -l /opt/
+#     - run: ls -l /opt/Unity/
+#     - run: ls -l /opt/Unity/Editor/
+#     - run: echo ${{ steps.z.outputs.id }}
+#     - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
+#     - run: cat Unity_v${{ matrix.unity-version }}.alf
 #     - run: echo -n $ULF aaa > Unity.ulf
 #       env:
 #         ULF: ${{ secrets.ulf_linux }}
 #     - run: /opt/Unity/Editor/Unity -nographics -quit -batchmode -manualLicenseFile Unity.ulf -logfile || exit 0
-    - run: /opt/Unity/Editor/Unity -nographics -quit -batchmode -password "$PWD" -username pcysl5edgo@yahoo.co.jp -logfile || exit 0
-      env:
-        PWD: ${{ secrets.pwd }}
+#     - run: /opt/Unity/Editor/Unity -nographics -quit -batchmode -password "$PWD" -username pcysl5edgo@yahoo.co.jp -logfile || exit 0
+#       env:
+#         PWD: ${{ secrets.pwd }}
+  build-gableroux:
+    runs-on: [ubuntu-latest]
+    strategy:
+      matrix:
+        unity-version: 
+        - 2018.4.9f1
+        - 2018.4.10f1
+        - 2018.4.11f1
+        - 2018.4.12f1
+        - 2018.4.13f1
+    container: docker://gableroux/unity3d:${{ matrix.unity-tag }}
+    steps:
+    - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
+    - run: cat Unity_v${{ matrix.unity-version }}.alf
