--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -124,7 +124,7 @@ jobs:
         - 2018.4.11f1
         - 2018.4.12f1
         - 2018.4.13f1
-    container: docker://gableroux/unity3d:${{ matrix.unity-tag }}
+    container: docker://gableroux/unity3d:${{ matrix.unity-version }}
     steps:
     - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
     - run: cat Unity_v${{ matrix.unity-version }}.alf
