--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -105,6 +105,7 @@ jobs:
     - run: rm -rf /opt/Unity/
     - run: ls -l /opt/
     - run: cat unity.tar.7z* > all.tar.7z
+    - run: mkdir -p /opt/Unity/
     - run: 7z x all.tar.7z -so | tar xf - -C /opt/Unity/
     - run: ls -l /opt/
     - run: ls -l /opt/Unity/
