--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -100,6 +100,9 @@ jobs:
     - uses: pCYSl5EDgo/setup-unity@master
       with:
         unity-version: ${{ matrix.unity-version }}
+        enable-cache: 'true'
+    - run: ls -l /opt/Unity/Editor
+    - run: ls -l /opt/Unity
     - run: /opt/Unity/Editor/Unity -batchmode -nographics -quit -logfile log.log -createManulActivationFile || exit 0
     - run: cat log.log
     - run: cat Unity_v${{ matrix.unity-version}}.alf
