--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -6,11 +6,11 @@ jobs:
   build-ubuntu-test:
     runs-on: [ubuntu-latest]
     steps:
-    - run: wget https://beta.unity3d.com/download/ffacea4b84e7/UnitySetup -O UnitySetup
-    - run: sudo chmod +x UnitySetup
+    - run: wget https://beta.unity3d.com/download/7eb5456f98b4/UnitySetup -O UnitySetUp
+    - run: sudo chmod +x UnitySetUp
     - run: ls -l
-    - run: UnitySetup --help || exit 0
-    - run: echo y | UnitySetup --unattended --install-location="/opt/Unity" --components="Unity,Android,WebGL"
+    - run: sudo ./UnitySetUp --help || exit 0
+    - run: echo y | ./UnitySetUp --unattended --install-location="/opt/Unity" --components="Unity,Android,WebGL"
     - run: ls -l /opt/Unity/Editor/ || exit 0
     - run: ls -l /opt/Unity/Editor/Data/PlaybackEngines/AndroidPlayer || exit 0
 #   build-macos-all:
