--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -3,17 +3,17 @@ name: Create ALF File
 on: [push]
 
 jobs:
-#   build-windows-test:
-#     runs-on: [windows-latest]
-#     steps:
-#     - run: bitsadmin /TRANSFER bj /download /priority normal https://download.unity3d.com/download_unity/ffacea4b84e7/Windows64EditorInstaller/UnitySetup64.exe %CD%\UnitySetup64.exe
-#       shell: cmd
-#     - run: UnitySetup64.exe /?
-#       continue-on-error: true
-#     - run: UnitySetup64.exe /H
-#       continue-on-error: true
-#     - run: UnitySetup64.exe /HELP
-#       continue-on-error: true
+  build-windows-test:
+    runs-on: [windows-latest]
+    steps:
+    - run: bitsadmin /TRANSFER bj /download /priority normal https://download.unity3d.com/download_unity/ffacea4b84e7/Windows64EditorInstaller/UnitySetup64.exe %CD%\UnitySetup64.exe
+      shell: cmd
+    - run: ./UnitySetup64.exe /?
+      continue-on-error: true
+    - run: ./UnitySetup64.exe /H
+      continue-on-error: true
+    - run: ./UnitySetup64.exe /HELP
+      continue-on-error: true
 #   build-mac-test:
 #     runs-on: [macOS-latest]
 #     steps:
@@ -33,18 +33,18 @@ jobs:
 #     - run: echo y | ./UnitySetUp --unattended --install-location="/opt/Unity" --components="Unity,Android,WebGL"
 #     - run: ls -l /opt/Unity/Editor/ || exit 0
 #     - run: ls -l /opt/Unity/Editor/Data/PlaybackEngines/AndroidPlayer || exit 0
-  build-macos-all:
-    runs-on: [macOS-latest]
-    strategy:
-      matrix:
-        unity-version: [2018.4.9f1, 2019.2.13f1, 2020.1.0a14]
-    steps:
-    - uses: actions/setup-ruby@v1
-      with:
-        ruby-version: '2.6.3'
-    - run: gem install u3d -v 1.2.1
-    - run: u3d available
-    - run: sudo /Users/runner/hostedtoolcache/Ruby/2.6.3/x64/bin/u3d install ${{ matrix.unity-version }} --all
+#   build-macos-all:
+#     runs-on: [macOS-latest]
+#     strategy:
+#       matrix:
+#         unity-version: [2018.4.9f1, 2019.2.13f1, 2020.1.0a14]
+#     steps:
+#     - uses: actions/setup-ruby@v1
+#       with:
+#         ruby-version: '2.6.3'
+#     - run: gem install u3d -v 1.2.1
+#     - run: u3d available
+#     - run: sudo /Users/runner/hostedtoolcache/Ruby/2.6.3/x64/bin/u3d install ${{ matrix.unity-version }} --all
 #   build-windows-all:
 #     runs-on: [windows-latest]
 #     strategy:
