--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - run: bitsadmin /TRANSFER bj /download /priority normal https://download.unity3d.com/download_unity/ffacea4b84e7/Windows64EditorInstaller/UnitySetup64.exe %CD%\UnitySetup64.exe
       shell: cmd
-    - run: ./UnitySetup64.exe /L
+    - run: ./UnitySetup64.exe /L /UI=reduced
       continue-on-error: true
 #   build-mac-test:
 #     runs-on: [macOS-latest]
