--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -90,9 +90,8 @@ jobs:
       uses: pCYSl5EDgo/setup-unity@master
       with:
         unity-version: ${{ matrix.unity-version }}
-    - run: dir "C:\Program Files\Unity\"
-    - run: dir 'C:\Program Files\Unity\Editor\'
-    - run: cat 'C:\Program Files\Unity\Editor\Data\Tools\RoslynScripts\unity_csc.bat'
+    - run: dir 'C:\Program Files\Unity\Editor\Data'
+    - run: get-content 'C:\Program Files\Unity\Editor\Data\Tools\RoslynScripts\unity_csc.bat'
     
   build-mac:
     runs-on: [macos-latest]
@@ -104,12 +103,8 @@ jobs:
       with:
         unity-version: ${{ matrix.unity-version }}
     - run: |
-        ls -l /Applications/Unity/
-        ls -l /Applications/Unity/Unity.app/
-        ls -l /Applications/Unity/Unity.app/Contents/
-        ls -l /Applications/Unity/Unity.app/Contents/Managed/
-    - run: /Applications/Unity/Unity.app/Contents/MacOS/Unity -quit -batchMode -createManualActivationFile -logfile || exit 0
-    - run: cat Unity_v${{ matrix.unity-version }}.alf
+        ls -l /Applications/Unity/Unity.app/Contents/Tools/RoslynScripts/
+        cat /Applications/Unity/Unity.app/Contents/Tools/RoslynScripts/unity_csc
 
   build-ubuntu:
     runs-on: ubuntu-latest
@@ -124,7 +119,7 @@ jobs:
     - uses: pCYSl5EDgo/setup-unity@master
       with:
         unity-version: ${{ matrix.unity-version }}
-    - run: ls -l /opt/Unity/Editor/Data/Tools/RoslynScripts
+    - run: ls -l /opt/Unity/Editor
 
 #     - run: echo -n $ULF aaa > Unity.ulf
 #       env:
