--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -90,8 +90,8 @@ jobs:
       uses: pCYSl5EDgo/setup-unity@master
       with:
         unity-version: ${{ matrix.unity-version }}
-    - run: dir 'C:\Program Files\Unity\Editor\Data'
-    - run: get-content 'C:\Program Files\Unity\Editor\Data\Tools\RoslynScripts\unity_csc.bat'
+    - run: dir 'C:\Program Files\Unity\Editor\Data\Tools'
+#     - run: get-content 'C:\Program Files\Unity\Editor\Data\Tools\RoslynScripts\unity_csc.bat'
     
   build-mac:
     runs-on: [macos-latest]
@@ -103,8 +103,8 @@ jobs:
       with:
         unity-version: ${{ matrix.unity-version }}
     - run: |
-        ls -l /Applications/Unity/Unity.app/Contents/Tools/RoslynScripts/
-        cat /Applications/Unity/Unity.app/Contents/Tools/RoslynScripts/unity_csc
+        ls -l /Applications/Unity/Unity.app/Contents/Tools/
+        #cat /Applications/Unity/Unity.app/Contents/Tools/RoslynScripts/unity_csc
 
   build-ubuntu:
     runs-on: ubuntu-latest
@@ -119,7 +119,7 @@ jobs:
     - uses: pCYSl5EDgo/setup-unity@master
       with:
         unity-version: ${{ matrix.unity-version }}
-    - run: ls -l /opt/Unity/Editor
+    - run: ls -l /opt/Unity/Editor/Data/Tools
 
 #     - run: echo -n $ULF aaa > Unity.ulf
 #       env:
